--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>
         My projects 
     </h1>
+    <ul>
+        <li><a href="/Module 2_assignment/"> Project 2</a></li>
+    </ul>
 </body>
 </html>
