--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         My projects 
     </h1>
     <ul>
-        <li><a href="/Module 2_assignment/"> Project 2</a></li>
+        <li><a href="/Module 2_assignment/"> Menu Project</a></li>
+        <li><a href="/Module3_assignment/"> Restaurant</a></li>
+        <li><a href="/Module4_assignment/"> Javascript</a></li>
     </ul>
 </body>
 </html>
