Solar sysytem website

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="/Module 2_assignment/"> Menu Project</a></li>
         <li><a href="/Module3_assignment/"> Restaurant</a></li>
         <li><a href="/Module4_assignment/"> Javascript</a></li>
+        <li><a href="/Module5_assignment/">Restaurant Website </a></li>
     </ul>
 </body>
 </html>
