--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <li><a href="/Module3_assignment/"> Restaurant</a></li>
         <li><a href="/Module4_assignment/"> Javascript</a></li>
         <li><a href="/Module5_assignment/">Restaurant Website </a></li>
-        <li><a href="/ST-3/">Solar_system</a></li>
+        <li><a href="/ST-3/"> Solar_System</a></li>
+        <li><a href="/Div-formation/"> Div formation </a></li>
     </ul>
 </body>
 </html>
