--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="/Module5_assignment/">Restaurant Website </a></li>
         <li><a href="/ST-3/"> Solar_System</a></li>
         <li><a href="/Div-formation/"> Div formation </a></li>
+        <li><a href="/Hotelwebsite/">Hotel_website</a></li>
     </ul>
 </body>
 </html>
