--- a/Module5_assignment/index.html
+++ b/Module5_assignment/index.html
@@ -81,6 +81,7 @@
           Sun-Thurs: 11:15am - 10:00pm<br>
           Fri: 11:15am - 2:30pm<br>
           Saturday Closed
+          Sunday open 
           <hr class="visible-xs">
         </section>
         <section id="address" class="col-sm-4">
