--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="/ST-3/"> Solar_System</a></li>
         <li><a href="/Div-formation/"> Div formation </a></li>
         <li><a href="/Hotelwebsite/">Hotel_website</a></li>
-        <li><a href="Minor_project/">Minor project</a></li>
+        <li><a href="/Minor_project/">Minor project</a></li>
     </ul>
 </body>
 </html>
